--- a/src/pokemon/PokemonCard.css
+++ b/src/pokemon/PokemonCard.css
@@ -1,12 +1,13 @@
 .pokemon {
     color: #E9E9E9;
-    max-width: 1440px;
+    max-width: 950px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px 133px 195px 127px;
+    padding-top: 104px;
+    padding-bottom: 195px;
 }
 
 .pokemon__info {
