--- a/src/pokemon/List.css
+++ b/src/pokemon/List.css
@@ -8,16 +8,10 @@
 
 .list__list {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.list__list-row {
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 }
