--- a/src/pokemon/MiniCard.css
+++ b/src/pokemon/MiniCard.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 220px;
-    width: 100%;
+    width: 220px;
+    height: 270px;
     padding-bottom: 20px;
     background: #242424;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
