rewrited styles with css grid

--- a/src/pokemon/List.css
+++ b/src/pokemon/List.css
@@ -1,17 +1,12 @@
 .list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     max-width: 950px;
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 220px);
+    justify-content: center;
+    column-gap: 20px;
+    row-gap: 23px;
+
 }
 
-.list__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
-}
+
